--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,1 +1,9 @@
-<% form.with()>
+<%= form_with model: @user do |f|%>
+    <%= f.label :email %>    
+    <%= f.email_field :email%>
+    <br>
+    <%= f.label :password %>    
+    <%= f.password_field :password%>
+    <br>
+    <%= f.submit "Create user "%>
+<%end%>
