--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
 <%= link_to "Create User", new_user_path %>
 <% @users.each do |user| %>
-    <%= render user %>
-<%end%>
+    <%= render partial: "user", locals: { user: user } %>
+<% end %>
