--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -5,5 +5,5 @@
     <%= f.label :password %>    
     <%= f.password_field :password%>
     <br>
-    <%= f.submit "Create user "%>
+    <%= f.submit "#{action} user "%>
 <%end%>
