--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,4 @@
 <%= render @user %>
+<%= button_to "Edit User", edit_user_path(@user), method: :get %>
+<%= button_to "Delete User", user_path(@user), method: :delete %>
+<%= link_to "Back", root_path %>
